# xcps_ai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xcps_ai/: __init__.py  __main__.py  cli.py  config.py  hdf5.py  inventory.py  models.py  plotting.py  reduce.py
tests/: test_models.py  test_plotting.py  test_reduce.py
