[project]
name = "xcps-ai"
version = "0.1.0"
description = "Reusable XPCS analysis project scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.11",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "typer>=0.12",
]

[project.scripts]
xcps-ai = "xcps_ai.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
